lab1/LanguageParser.py
# Generated from Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'byte'", "'int'", "'uint'", 
                     "'long'", "'ulong'", "'char'", "'string'", "'if'", 
                     "'else'", "'while'", "'do'", "'break'", "'return'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'='", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'&&'", "'||'", "'!'", "'~'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BYTE", "INT", "UINT", "LONG", 
                      "ULONG", "CHAR", "STRING_TYPE", "IF", "ELSE", "WHILE", 
                      "DO", "BREAK", "RETURN", "BOOL_LITERAL", "IDENTIFIER", 
                      "STRING", "CHAR_LITERAL", "HEX", "BITS", "DEC", "PLUS", 
                      "MINUS", "MUL", "DIV", "ASSIGN", "EQ", "NEQ", "LT", 
                      "GT", "LTE", "GTE", "AND", "OR", "NOT", "TILDE", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_source = 0
    RULE_typeRef = 1
    RULE_builtinType = 2
    RULE_funcSignature = 3
    RULE_argDefList = 4
    RULE_argDef = 5
    RULE_sourceItem = 6
    RULE_funcDef = 7
    RULE_statement = 8
    RULE_varStatement = 9
    RULE_identifierList = 10
    RULE_ifStatement = 11
    RULE_block = 12
    RULE_whileStatement = 13
    RULE_doStatement = 14
    RULE_breakStatement = 15
    RULE_returnStatement = 16
    RULE_expressionStatement = 17
    RULE_emptyStatement = 18
    RULE_expr = 19
    RULE_exprList = 20
    RULE_literal = 21
    RULE_binOp = 22
    RULE_unOp = 23

    ruleNames =  [ "source", "typeRef", "builtinType", "funcSignature", 
                   "argDefList", "argDef", "sourceItem", "funcDef", "statement", 
                   "varStatement", "identifierList", "ifStatement", "block", 
                   "whileStatement", "doStatement", "breakStatement", "returnStatement", 
                   "expressionStatement", "emptyStatement", "expr", "exprList", 
                   "literal", "binOp", "unOp" ]

    EOF = Token.EOF
    BOOL=1
    BYTE=2
    INT=3
    UINT=4
    LONG=5
    ULONG=6
    CHAR=7
    STRING_TYPE=8
    IF=9
    ELSE=10
    WHILE=11
    DO=12
    BREAK=13
    RETURN=14
    BOOL_LITERAL=15
    IDENTIFIER=16
    STRING=17
    CHAR_LITERAL=18
    HEX=19
    BITS=20
    DEC=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    ASSIGN=26
    EQ=27
    NEQ=28
    LT=29
    GT=30
    LTE=31
    GTE=32
    AND=33
    OR=34
    NOT=35
    TILDE=36
    LPAREN=37
    RPAREN=38
    LBRACE=39
    RBRACE=40
    LBRACK=41
    RBRACK=42
    SEMI=43
    COMMA=44
    WS=45
    COMMENT=46
    MULTILINE_COMMENT=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)

        def sourceItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.SourceItemContext)
            else:
                return self.getTypedRuleContext(LanguageParser.SourceItemContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_source

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSource" ):
                listener.enterSource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSource" ):
                listener.exitSource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = LanguageParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66046) != 0):
                self.state = 48
                self.sourceItem()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(LanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LanguageParser.RULE_typeRef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CustomTypeRefContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(LanguageParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomTypeRef" ):
                listener.enterCustomTypeRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomTypeRef" ):
                listener.exitCustomTypeRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustomTypeRef" ):
                return visitor.visitCustomTypeRef(self)
            else:
                return visitor.visitChildren(self)


    class ArrayTypeRefContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeRef(self):
            return self.getTypedRuleContext(LanguageParser.TypeRefContext,0)

        def LBRACK(self):
            return self.getToken(LanguageParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(LanguageParser.RBRACK, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMA)
            else:
                return self.getToken(LanguageParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayTypeRef" ):
                listener.enterArrayTypeRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayTypeRef" ):
                listener.exitArrayTypeRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayTypeRef" ):
                return visitor.visitArrayTypeRef(self)
            else:
                return visitor.visitChildren(self)


    class BuiltinTypeRefContext(TypeRefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.TypeRefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def builtinType(self):
            return self.getTypedRuleContext(LanguageParser.BuiltinTypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuiltinTypeRef" ):
                listener.enterBuiltinTypeRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuiltinTypeRef" ):
                listener.exitBuiltinTypeRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuiltinTypeRef" ):
                return visitor.visitBuiltinTypeRef(self)
            else:
                return visitor.visitChildren(self)



    def typeRef(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LanguageParser.TypeRefContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_typeRef, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8]:
                localctx = LanguageParser.BuiltinTypeRefContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                self.builtinType()
                pass
            elif token in [16]:
                localctx = LanguageParser.CustomTypeRefContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(LanguageParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = LanguageParser.ArrayTypeRefContext(self, LanguageParser.TypeRefContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_typeRef)
                    self.state = 61
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 62
                    self.match(LanguageParser.LBRACK)
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==44:
                        self.state = 63
                        self.match(LanguageParser.COMMA)
                        self.state = 68
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 69
                    self.match(LanguageParser.RBRACK) 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BuiltinTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(LanguageParser.BOOL, 0)

        def BYTE(self):
            return self.getToken(LanguageParser.BYTE, 0)

        def INT(self):
            return self.getToken(LanguageParser.INT, 0)

        def UINT(self):
            return self.getToken(LanguageParser.UINT, 0)

        def LONG(self):
            return self.getToken(LanguageParser.LONG, 0)

        def ULONG(self):
            return self.getToken(LanguageParser.ULONG, 0)

        def CHAR(self):
            return self.getToken(LanguageParser.CHAR, 0)

        def STRING_TYPE(self):
            return self.getToken(LanguageParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_builtinType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuiltinType" ):
                listener.enterBuiltinType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuiltinType" ):
                listener.exitBuiltinType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuiltinType" ):
                return visitor.visitBuiltinType(self)
            else:
                return visitor.visitChildren(self)




    def builtinType(self):

        localctx = LanguageParser.BuiltinTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_builtinType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 510) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncSignatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LanguageParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def argDefList(self):
            return self.getTypedRuleContext(LanguageParser.ArgDefListContext,0)


        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def typeRef(self):
            return self.getTypedRuleContext(LanguageParser.TypeRefContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_funcSignature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncSignature" ):
                listener.enterFuncSignature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncSignature" ):
                listener.exitFuncSignature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncSignature" ):
                return visitor.visitFuncSignature(self)
            else:
                return visitor.visitChildren(self)




    def funcSignature(self):

        localctx = LanguageParser.FuncSignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcSignature)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 77
                self.typeRef(0)


            self.state = 80
            self.match(LanguageParser.IDENTIFIER)
            self.state = 81
            self.match(LanguageParser.LPAREN)
            self.state = 82
            self.argDefList()
            self.state = 83
            self.match(LanguageParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgDefListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ArgDefContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ArgDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMA)
            else:
                return self.getToken(LanguageParser.COMMA, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_argDefList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgDefList" ):
                listener.enterArgDefList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgDefList" ):
                listener.exitArgDefList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgDefList" ):
                return visitor.visitArgDefList(self)
            else:
                return visitor.visitChildren(self)




    def argDefList(self):

        localctx = LanguageParser.ArgDefListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argDefList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 66046) != 0):
                self.state = 85
                self.argDef()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==44:
                    self.state = 86
                    self.match(LanguageParser.COMMA)
                    self.state = 87
                    self.argDef()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LanguageParser.IDENTIFIER, 0)

        def typeRef(self):
            return self.getTypedRuleContext(LanguageParser.TypeRefContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_argDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgDef" ):
                listener.enterArgDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgDef" ):
                listener.exitArgDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgDef" ):
                return visitor.visitArgDef(self)
            else:
                return visitor.visitChildren(self)




    def argDef(self):

        localctx = LanguageParser.ArgDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 95
                self.typeRef(0)


            self.state = 98
            self.match(LanguageParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SourceItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDef(self):
            return self.getTypedRuleContext(LanguageParser.FuncDefContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_sourceItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceItem" ):
                listener.enterSourceItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceItem" ):
                listener.exitSourceItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceItem" ):
                return visitor.visitSourceItem(self)
            else:
                return visitor.visitChildren(self)




    def sourceItem(self):

        localctx = LanguageParser.SourceItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sourceItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.funcDef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcSignature(self):
            return self.getTypedRuleContext(LanguageParser.FuncSignatureContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(LanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = LanguageParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.funcSignature()
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.state = 103
                self.block()
                pass
            elif token in [43]:
                self.state = 104
                self.match(LanguageParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varStatement(self):
            return self.getTypedRuleContext(LanguageParser.VarStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LanguageParser.IfStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(LanguageParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(LanguageParser.DoStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(LanguageParser.BreakStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(LanguageParser.ReturnStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionStatementContext,0)


        def emptyStatement(self):
            return self.getTypedRuleContext(LanguageParser.EmptyStatementContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.varStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 110
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.doStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 112
                self.breakStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 113
                self.returnStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 114
                self.expressionStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 115
                self.emptyStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeRef(self):
            return self.getTypedRuleContext(LanguageParser.TypeRefContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(LanguageParser.IdentifierListContext,0)


        def SEMI(self):
            return self.getToken(LanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_varStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarStatement" ):
                listener.enterVarStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarStatement" ):
                listener.exitVarStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarStatement" ):
                return visitor.visitVarStatement(self)
            else:
                return visitor.visitChildren(self)




    def varStatement(self):

        localctx = LanguageParser.VarStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.typeRef(0)
            self.state = 119
            self.identifierList()
            self.state = 120
            self.match(LanguageParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.IDENTIFIER)
            else:
                return self.getToken(LanguageParser.IDENTIFIER, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.ASSIGN)
            else:
                return self.getToken(LanguageParser.ASSIGN, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMA)
            else:
                return self.getToken(LanguageParser.COMMA, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = LanguageParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(LanguageParser.IDENTIFIER)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 123
                self.match(LanguageParser.ASSIGN)
                self.state = 124
                self.expr(0)


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 127
                self.match(LanguageParser.COMMA)
                self.state = 128
                self.match(LanguageParser.IDENTIFIER)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 129
                    self.match(LanguageParser.ASSIGN)
                    self.state = 130
                    self.expr(0)


                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LanguageParser.IF, 0)

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(LanguageParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(LanguageParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(LanguageParser.ELSE, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_ifStatement
